# cene_baglanti

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  benchmark.py  cli.py  config.py  pipeline.py  review.py
app/exporters/: __init__.py  placement_debug.py
app/geometry/: __init__.py  align.py  features.py  mount_assets.py  preprocess.py  saddle.py  symmetry.py
app/models/: __init__.py  helmet_scan.py  mount_spec.py  placement.py  result.py
app/ui/: __init__.py  regeneration.py  schemas.py  selection_store.py  server.py  services.py
app/utils/: io.py
app/workers/: __init__.py
benchmark/cases/helmet_a/: case.json
benchmark/cases/helmet_b/: case.json
benchmark/cases/helmet_c/: case.json
benchmark/cases/sample_box/: case.json  review.reference.json
benchmark/manifests/: README.md
scans/: sample_box.stl
tests/: test_benchmark_runner.py  test_mount_assets.py  test_mount_features.py  test_review_workflow.py  test_saddle_generation.py  test_symmetry_alignment.py  test_ui_server.py
webui/: api.js  app.js  index.html  mesh_viewer.js  selection_tools.js  styles.css
