[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cene-baglanti"
version = "0.1.0"
description = "Helmet scan to mount generation pipeline bootstrap."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "numpy",
  "scipy",
  "trimesh",
  "open3d",
  "typer",
  "pydantic",
  "rich",
]

[project.scripts]
cene-baglanti = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]
